// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AirChangeSelectFarePage Page Header should match the snapshot 1`] = `
<div>
  <div>
    <div>
      <div
        class="flight-select-fare--container"
      >
        <div>
          <div
            class="page-header action-bar"
            id=""
          >
            <ul
              class="action-bar-buttons action-bar--left-buttons"
            />
            <div
              class="action-bar--container"
            >
              <div
                class="action-bar--title"
              >
                <span
                  class="action-bar--main-title"
                >
                  Select Fare
                </span>
                <span
                  class="action-bar--sub-title"
                />
              </div>
            </div>
            <ul
              class="action-bar-buttons action-bar--right-buttons"
            >
              <li
                class="action-bar-buttons--item"
              >
                <button
                  class="cancel button"
                  type="button"
                >
                  SHARED__BUTTON_TEXT__CANCEL
                </button>
              </li>
            </ul>
          </div>
          <div />
        </div>
        <div
          class="flight-header"
        >
          <div
            class="flight-header--col flight-header--col-label"
            data-qa="departs"
          >
            <div
              class="label-container"
            >
              <div
                class="label-container--label"
              >
                Departs
              </div>
              <div
                class="label-container--content"
              >
                <div
                  class="flight-time"
                >
                  <div
                    class="flight-time--time"
                  >
                    <span>
                      7:35
                    </span>
                    <span
                      class="time-period"
                    >
                      PM
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flight-header--col flight-header--col-label"
          >
            <div
              class="label-container flight-header--flight-numbers-col"
            >
              <div
                class="label-container--label"
              >
                Flight#
              </div>
              <div
                class="label-container--content"
              >
                <div
                  class="flight-header--flight-number"
                >
                  4827
                </div>
                <div
                  class="flight-header--stops"
                >
                  Nonstop
                </div>
              </div>
            </div>
          </div>
          <div
            class="flight-header--col flight-header--col-label"
          >
            <div
              class="label-container flight-header--arrives-col"
            >
              <div
                class="label-container--label"
              >
                Arrives
              </div>
              <div
                class="label-container--content"
              >
                <div
                  class="flight-time"
                >
                  <div
                    class="flight-time--time"
                  >
                    <span>
                      9:25
                    </span>
                    <span
                      class="time-period"
                    >
                      PM
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bgwhite pt4 px4"
        >
          <div
            class="bgltblue px4 py4 mb5"
            data-qa="disclaimerWithLinks"
          >
            <p>
              All fares are rounded up to the nearest dollar
            </p>
          </div>
          <div
            class="pt3"
            data-qa="flight-products"
          >
            <div
              class="flight-product-section"
              data-qa="WGA"
            >
              <div
                class="flight-product-section--header bdyellow"
              >
                <div
                  class="xlarge bold"
                >
                  <span>
                    Wanna Get Away
                  </span>
                </div>
                <div
                  class="red bold"
                >
                  3 left
                </div>
              </div>
              <div
                class="flight-product-section--container"
              >
                <div
                  class="main-col"
                >
                  <ul
                    class="features-list"
                  >
                    <li
                      class="icon icon_bullet features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        2 Free Checked Bags®*
                      </span>
                    </li>
                    <li
                      class="icon icon_bullet features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        No Change Fees**
                      </span>
                    </li>
                    <li
                      class="icon icon_bullet features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Reusable funds (up to 12 months from date of purchase)
                      </span>
                    </li>
                  </ul>
                </div>
                <div
                  class="fare-col"
                >
                  <div
                    class="fare-container"
                  >
                    <div
                      class="fare-content bdb3 bdyellow"
                    >
                      <div>
                        <div
                          class="original-price"
                        >
                           
                        </div>
                        <div
                          class="currency final-price"
                        >
                          -
                          <span
                            class="money-sign"
                          >
                            $
                          </span>
                          <span
                            data-qa="total-amount"
                          >
                            25
                          </span>
                        </div>
                        <div
                          class="intl-points-taxes"
                        >
                           
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="pt4 black bold center"
                    data-qa="earn-points"
                  >
                    Earn 1,138 pts
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flight-product-section"
              data-qa="PLU"
            >
              <div
                class="flight-product-section--header bdred"
              >
                <div
                  class="xlarge bold"
                >
                  <span
                    class="pdkblue"
                  >
                    Wanna Get Away
                  </span>
                  <span
                    class="red"
                    style="font-family: Fairwater Script;"
                  >
                     plus
                  </span>
                </div>
              </div>
              <div
                class="flight-product-section--container"
              >
                <div
                  class="main-col"
                >
                  <ul
                    class="features-list"
                  >
                    <li
                      class="icon icon_bullet features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        All the benefits of Wanna Get Away, plus:
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Same-day change
                        <sup>
                          3
                        </sup>
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Same-day standby
                        <sup>
                          3
                        </sup>
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Transferable Funds
                        <sup>
                          4
                        </sup>
                      </span>
                    </li>
                  </ul>
                </div>
                <div
                  class="fare-col"
                >
                  <div
                    class="fare-container unavailable"
                  >
                    <div
                      class="fare-content unavailable"
                    >
                      Unavailable
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flight-product-section"
              data-qa="ANY"
            >
              <div
                class="flight-product-section--header bdsltblue"
              >
                <div
                  class="xlarge bold"
                >
                  <span>
                    Anytime
                  </span>
                </div>
              </div>
              <div
                class="flight-product-section--container"
              >
                <div
                  class="main-col"
                >
                  <ul
                    class="features-list"
                  >
                    <li
                      class="icon icon_bullet features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        All the benefits of Wanna Get Away, plus:
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Refundable
                        <sup>
                          2
                        </sup>
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Same-day change
                        <sup>
                          3
                        </sup>
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Same-day standby
                        <sup>
                          3
                        </sup>
                      </span>
                    </li>
                  </ul>
                </div>
                <div
                  class="fare-col"
                >
                  <div
                    class="fare-container"
                  >
                    <div
                      class="fare-content bdb3 bdsltblue"
                    >
                      <div>
                        <div
                          class="original-price"
                        >
                           
                        </div>
                        <div
                          class="currency final-price"
                        >
                          <span
                            class="money-sign"
                          >
                            $
                          </span>
                          <span
                            data-qa="total-amount"
                          >
                            0
                          </span>
                        </div>
                        <div
                          class="intl-points-taxes"
                        >
                           
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="pt4 black bold center"
                    data-qa="earn-points"
                  >
                    Earn 4,510 pts
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flight-product-section"
              data-qa="BUS"
            >
              <div
                class="flight-product-section--header bdpblue"
              >
                <div
                  class="xlarge bold"
                >
                  <span>
                    Business Select
                  </span>
                </div>
              </div>
              <div
                class="flight-product-section--container"
              >
                <div
                  class="main-col"
                >
                  <ul
                    class="features-list"
                  >
                    <li
                      class="icon icon_bullet features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        All the benefits of Anytime, plus:
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Priority Boarding A1-A15
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Fly By® Security Lane
                        <sup>
                          4
                        </sup>
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Fly By® Priority Lane
                        <sup>
                          4
                        </sup>
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Premium drink
                        <sup>
                          4
                        </sup>
                      </span>
                    </li>
                  </ul>
                </div>
                <div
                  class="fare-col"
                >
                  <div
                    class="fare-container"
                  >
                    <div
                      class="fare-content bdb3 bdpblue"
                    >
                      <div>
                        <div
                          class="original-price"
                        >
                           
                        </div>
                        <div
                          class="currency final-price"
                        >
                          +
                          <span
                            class="money-sign"
                          >
                            $
                          </span>
                          <span
                            data-qa="total-amount"
                          >
                            25
                          </span>
                        </div>
                        <div
                          class="intl-points-taxes"
                        >
                           
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="pt4 black bold center"
                    data-qa="earn-points"
                  >
                    Earn 5,658 pts
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="py5 bdt large"
          >
            <a
              class="block pblue"
              data-qa="fare-details-link"
            >
              Mock Fare Details Text
            </a>
          </div>
        </div>
        <div
          class="white px4 py5"
        >
          <div
            class="footnotes"
          >
            <div
              class="footnote"
            >
               
              <span
                data-qa="footnote-label"
              >
                <a
                  href="\\\\\\"/baggage-restrictions\\""
                  target="\\\\\\"_blank\\\\\\""
                >
                  * First and second checked bags. Weight and size limits apply.
                </a>
              </span>
            </div>
            <div
              class="footnote"
            >
              <span
                data-qa="footnote-prefix"
              >
                **
              </span>
               
              <span
                data-qa="footnote-label"
              >
                Fare difference may apply.
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AirChangeSelectFarePage Page Header should omit disclaimer when not provided 1`] = `
<div>
  <div>
    <div>
      <div
        class="flight-select-fare--container"
      >
        <div>
          <div
            class="page-header action-bar"
            id=""
          >
            <ul
              class="action-bar-buttons action-bar--left-buttons"
            />
            <div
              class="action-bar--container"
            >
              <div
                class="action-bar--title"
              >
                <span
                  class="action-bar--main-title"
                >
                  Select Fare
                </span>
                <span
                  class="action-bar--sub-title"
                />
              </div>
            </div>
            <ul
              class="action-bar-buttons action-bar--right-buttons"
            >
              <li
                class="action-bar-buttons--item"
              >
                <button
                  class="cancel button"
                  type="button"
                >
                  SHARED__BUTTON_TEXT__CANCEL
                </button>
              </li>
            </ul>
          </div>
          <div />
        </div>
        <div
          class="flight-header"
        >
          <div
            class="flight-header--col flight-header--col-label"
            data-qa="departs"
          >
            <div
              class="label-container"
            >
              <div
                class="label-container--label"
              >
                Departs
              </div>
              <div
                class="label-container--content"
              >
                <div
                  class="flight-time"
                >
                  <div
                    class="flight-time--time"
                  >
                    <span>
                      7:35
                    </span>
                    <span
                      class="time-period"
                    >
                      PM
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flight-header--col flight-header--col-label"
          >
            <div
              class="label-container flight-header--flight-numbers-col"
            >
              <div
                class="label-container--label"
              >
                Flight#
              </div>
              <div
                class="label-container--content"
              >
                <div
                  class="flight-header--flight-number"
                >
                  4827
                </div>
                <div
                  class="flight-header--stops"
                >
                  Nonstop
                </div>
              </div>
            </div>
          </div>
          <div
            class="flight-header--col flight-header--col-label"
          >
            <div
              class="label-container flight-header--arrives-col"
            >
              <div
                class="label-container--label"
              >
                Arrives
              </div>
              <div
                class="label-container--content"
              >
                <div
                  class="flight-time"
                >
                  <div
                    class="flight-time--time"
                  >
                    <span>
                      9:25
                    </span>
                    <span
                      class="time-period"
                    >
                      PM
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bgwhite pt4 px4"
        >
          <div
            class="pt3"
            data-qa="flight-products"
          >
            <div
              class="flight-product-section"
              data-qa="WGA"
            >
              <div
                class="flight-product-section--header bdyellow"
              >
                <div
                  class="xlarge bold"
                >
                  <span>
                    Wanna Get Away
                  </span>
                </div>
                <div
                  class="red bold"
                >
                  3 left
                </div>
              </div>
              <div
                class="flight-product-section--container"
              >
                <div
                  class="main-col"
                >
                  <ul
                    class="features-list"
                  >
                    <li
                      class="icon icon_bullet features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        2 Free Checked Bags®*
                      </span>
                    </li>
                    <li
                      class="icon icon_bullet features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        No Change Fees**
                      </span>
                    </li>
                    <li
                      class="icon icon_bullet features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Reusable funds (up to 12 months from date of purchase)
                      </span>
                    </li>
                  </ul>
                </div>
                <div
                  class="fare-col"
                >
                  <div
                    class="fare-container"
                  >
                    <div
                      class="fare-content bdb3 bdyellow"
                    >
                      <div>
                        <div
                          class="original-price"
                        >
                           
                        </div>
                        <div
                          class="currency final-price"
                        >
                          -
                          <span
                            class="money-sign"
                          >
                            $
                          </span>
                          <span
                            data-qa="total-amount"
                          >
                            25
                          </span>
                        </div>
                        <div
                          class="intl-points-taxes"
                        >
                           
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="pt4 black bold center"
                    data-qa="earn-points"
                  >
                    Earn 1,138 pts
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flight-product-section"
              data-qa="PLU"
            >
              <div
                class="flight-product-section--header bdred"
              >
                <div
                  class="xlarge bold"
                >
                  <span
                    class="pdkblue"
                  >
                    Wanna Get Away
                  </span>
                  <span
                    class="red"
                    style="font-family: Fairwater Script;"
                  >
                     plus
                  </span>
                </div>
              </div>
              <div
                class="flight-product-section--container"
              >
                <div
                  class="main-col"
                >
                  <ul
                    class="features-list"
                  >
                    <li
                      class="icon icon_bullet features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        All the benefits of Wanna Get Away, plus:
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Same-day change
                        <sup>
                          3
                        </sup>
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Same-day standby
                        <sup>
                          3
                        </sup>
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Transferable Funds
                        <sup>
                          4
                        </sup>
                      </span>
                    </li>
                  </ul>
                </div>
                <div
                  class="fare-col"
                >
                  <div
                    class="fare-container unavailable"
                  >
                    <div
                      class="fare-content unavailable"
                    >
                      Unavailable
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flight-product-section"
              data-qa="ANY"
            >
              <div
                class="flight-product-section--header bdsltblue"
              >
                <div
                  class="xlarge bold"
                >
                  <span>
                    Anytime
                  </span>
                </div>
              </div>
              <div
                class="flight-product-section--container"
              >
                <div
                  class="main-col"
                >
                  <ul
                    class="features-list"
                  >
                    <li
                      class="icon icon_bullet features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        All the benefits of Wanna Get Away, plus:
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Refundable
                        <sup>
                          2
                        </sup>
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Same-day change
                        <sup>
                          3
                        </sup>
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Same-day standby
                        <sup>
                          3
                        </sup>
                      </span>
                    </li>
                  </ul>
                </div>
                <div
                  class="fare-col"
                >
                  <div
                    class="fare-container"
                  >
                    <div
                      class="fare-content bdb3 bdsltblue"
                    >
                      <div>
                        <div
                          class="original-price"
                        >
                           
                        </div>
                        <div
                          class="currency final-price"
                        >
                          <span
                            class="money-sign"
                          >
                            $
                          </span>
                          <span
                            data-qa="total-amount"
                          >
                            0
                          </span>
                        </div>
                        <div
                          class="intl-points-taxes"
                        >
                           
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="pt4 black bold center"
                    data-qa="earn-points"
                  >
                    Earn 4,510 pts
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flight-product-section"
              data-qa="BUS"
            >
              <div
                class="flight-product-section--header bdpblue"
              >
                <div
                  class="xlarge bold"
                >
                  <span>
                    Business Select
                  </span>
                </div>
              </div>
              <div
                class="flight-product-section--container"
              >
                <div
                  class="main-col"
                >
                  <ul
                    class="features-list"
                  >
                    <li
                      class="icon icon_bullet features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        All the benefits of Anytime, plus:
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Priority Boarding A1-A15
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Fly By® Security Lane
                        <sup>
                          4
                        </sup>
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Fly By® Priority Lane
                        <sup>
                          4
                        </sup>
                      </span>
                    </li>
                    <li
                      class="icon icon_plus features-list--item"
                    >
                      <span
                        class="features-list--text"
                      >
                        Premium drink
                        <sup>
                          4
                        </sup>
                      </span>
                    </li>
                  </ul>
                </div>
                <div
                  class="fare-col"
                >
                  <div
                    class="fare-container"
                  >
                    <div
                      class="fare-content bdb3 bdpblue"
                    >
                      <div>
                        <div
                          class="original-price"
                        >
                           
                        </div>
                        <div
                          class="currency final-price"
                        >
                          +
                          <span
                            class="money-sign"
                          >
                            $
                          </span>
                          <span
                            data-qa="total-amount"
                          >
                            25
                          </span>
                        </div>
                        <div
                          class="intl-points-taxes"
                        >
                           
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="pt4 black bold center"
                    data-qa="earn-points"
                  >
                    Earn 5,658 pts
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="py5 bdt large"
          >
            <a
              class="block pblue"
              data-qa="fare-details-link"
            >
              Mock Fare Details Text
            </a>
          </div>
        </div>
        <div
          class="white px4 py5"
        >
          <div
            class="footnotes"
          >
            <div
              class="footnote"
            >
               
              <span
                data-qa="footnote-label"
              >
                <a
                  href="\\\\\\"/baggage-restrictions\\""
                  target="\\\\\\"_blank\\\\\\""
                >
                  * First and second checked bags. Weight and size limits apply.
                </a>
              </span>
            </div>
            <div
              class="footnote"
            >
              <span
                data-qa="footnote-prefix"
              >
                **
              </span>
               
              <span
                data-qa="footnote-label"
              >
                Fare difference may apply.
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
